<resources>
    <string name="app_name">Projet_Mobile</string>
    <string name="creation_de_parcours">Créations de parcours APA</string>
    <string name="parcs">Parcours de APA</string>
    <string name="descriptions">Description</string>
    <string name="categories">Categorie</string>
    <string name="patients">Patient</string>
    <string name="activites">Activites</string>
    <string name="durees">Duree</string>
    <string name="activites_ajouter">Ajouter une activité</string>
    <string name="valide">Valider</string>
    <string name="annule">Annuler</string>
    <string name="titres">Titre</string>
    <string name="activites_objet"> Activité:</string>
    <string name="mail">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Se connecter</string>
    <string name="fleche"></string>
    <string name="swipe_right_enregistrer">S\'enregistrer en glissant a droite</string>
    <string name="noms">Noms</string>
    <string name="prenoms">Prenoms</string>
    <string name="profils">Profil :</string>
    <string name="remot_de_passe">Confirmer le mot de passe</string>
    <string name="enregistrer">S\'enregistrer</string>
<string name="swipe_left_connexion">Se connecter en glissant a gauche</string>
    <string name="fermer" />
    <string name="btn_horaire" />
    <string name="reorganisr">Réorganiser</string>
    <string name="dac"> Ok </string>
    <string name="bouton_horaire">Bouton horaires</string>
    <string name="dates_du_patient">Dates du patient :</string>
    <string name="heure">heure</string>
    <string name="valider">valider</string>
    <string name="arreter">Annuler</string>
    <string name="description">Description</string>
    <string name="daccord">D\'accord</string>
    <string name="reprogrammer">Reprogrammer</string>
    <string name="parcours">Parcours</string>
    <string name="associer_activiter">Asscocier</string>
    <string name="titre">Titre</string>
    <string name="derouler">Derouler</string>
    <string name="ok">oui</string>
    <string name="nop">non</string>
    <string name="struc">structure</string>
    <string name="nom" />
    <string name="disciplines">disciplines</string>
    <string name="associer_horaire">associer_horaire</string>
    <string name="titre_activite">Titre activiter</string>
    <string name="date_seance">Date de seance</string>
    <string name="seance" />
</resources>