<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".FragmentEnregistrer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/enregistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enregistrer"
            android:textAlignment="center"
            android:textSize="50sp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:layout_marginLeft="25dp" />

        <EditText
            android:id="@+id/noms"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/noms"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp"
            android:autofillHints="@string/noms" />

        <EditText
            android:id="@+id/prenoms"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/prenoms"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp"
            android:autofillHints="@string/prenoms" />

        <TextView
            android:id="@+id/profils"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profils"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/listes_des_profils"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:entries="@array/listes_des_profils"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/mail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:autofillHints="@string/mail" />

        <EditText
            android:id="@+id/mot_de_passe"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/mot_de_passe"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:autofillHints="@string/mot_de_passe" />

        <EditText
            android:id="@+id/remot_de_passe"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/remot_de_passe"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:autofillHints="@string/remot_de_passe" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/bouton_enregistrer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/enregistrer"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_above="@id/swipe_left_connexion"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/fleche" />

            <TextView
                android:id="@+id/swipe_left_connexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/swipe_left_connexion"
                android:textSize="15sp" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>